# WorkBench-Inventory-System

./: .gitignore  AI_DATASHEET_READER.md  DEPLOY.md  DEPLOYMENT.md  DEPLOYMENT_STATUS.md  EMAIL_SETUP_INSTRUCTIONS.md  FRONTEND_FIX_REPORT.md  FUNCTIONALITY_FIXES.md  GITHUB_SYNC_COMPLETE.md  MOCK_DATA_SUMMARY.md  PDF_DATASHEET_SYSTEM.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  SHARED_CATALOG_SYSTEM.md  SYSTEM_VERIFICATION_REPORT.md  add-github-mock-data.sh  add-mock-data.sh  cors.json  deploy.sh  package-lock.json  package.json  reset-and-add-github-data.sh  tsconfig.json  verify-deployment.sh  wrangler.toml
frontend/: App.tsx  README.md  api.ts  index.html  mockData.ts  package-lock.json  package.json  types.ts
frontend.backup.20251126_210941/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js
frontend_backup_20251126_233841/: metadata.json  package-lock.json  package.json  types.ts
migrations/: 0000_initial.sql  0001_add_categories.sql  0002_add_inventory_logs.sql  0003_rebuild_categories.sql  0004_add_fts_triggers.sql  0005_fix_category_duplicates.sql  0006_fix_fts_triggers.sql  0007_shared_catalog.sql  0008_rebuild_fts.sql  0009_add_shop_logo.sql  0010_add_user_status.sql  0011_add_landing_cost.sql  0012_add_user_memories.sql  (+1 more)
temp_memori/demos/job_search_agent/: .env.example  README.md  app.py  pyproject.toml  resume_parser.py  workflow.py
temp_memori/demos/job_search_agent/.streamlit/: config.toml
temp_memori/examples/integrations/pydanticAI_researcher_example/: README.md  app.py  pyproject.toml  researcher.py
(+220 files in other folders)
